src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__comment_lines-16.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse(comment_lines, \"# comment\\0\\r\\n\")"
---
- token: comment
  stream: "# comment"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 9
      line: 0
      column: 9
- token: error
  stream: "\u0000"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 0
      column: 10
- severity: error
  message: "expected a printable character, but found non-printable character '\\0'"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 0
      column: 10
  stream: "\u0000"
- token: break
  stream: "\r\n"
  span:
    start:
      index: 10
      line: 0
      column: 10
    end:
      index: 12
      line: 1
      column: 0
- value: ~

