src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__comment_lines-17.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(comment_lines, \"\")"
---
- value: ~

