src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__comment_lines-18.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(comment_lines, \"# comment\")"
---
- value: ~
- remainder: "# comment"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 9
      line: 0
      column: 9

