src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__comment_lines-19.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(comment_lines, \"foo\")"
---
- value: ~
- remainder: foo
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3

