src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__comment_lines-20.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(comment_lines, \"\\n\")"
---
- value: ~
- remainder: "\n"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 1
      column: 0

